fields/autosuggest/src/styles.scss
@import '@panneau/core/src/styles/variables';

.container {
    .autosuggest {
        position: relative;

        .input {
            position: relative;
            z-index: 2;
        }

        .suggestionsContainer {
            display: none;
            position: absolute;
            top: 100%;
            left: 0;
            min-width: 50%;
            margin-top: -1px;
            border: solid 1px $dropdown-border;
            border-top: 0;
            border-radius: $border-radius-base;
            border-top-left-radius: 0;
            border-top-right-radius: 0;
            background: $dropdown-bg;
            box-shadow: 0 0 8px $dropdown-border;
            z-index: 1;

            &.open {
                display: block;
            }
        }

        .suggestions,
        .suggestion {
            margin: 0;
            padding: 0;
            list-style: none;
        }

        .suggestion {
            padding: 5px;
            border-bottom: solid 1px $input-border;
            cursor: pointer;

            .thumbnail {
                display: block;
                width: 32px;
                height: 16px;
                margin-right: 10px;
                border: solid 1px $input-border;
                background-color: $gray-lighter;
                background-repeat: no-repeat;
                background-position: center;
                background-size: contain;
            }

            .cols {
                display: table;
                width: 100%;
            }

            .col {
                display: table-cell;
                vertical-align: middle;

                &.expand {
                    width: 100%;
                }
            }

            .title {
                font-weight: bold;
            }

            .description {
                font-size: 85%;
            }

            &.highlighted {
                background: $component-active-bg;
                color: $component-active-color;
            }

            &:last-child {
                border-bottom: 0;
            }
        }

        &.open {
            .input {
                border-bottom-left-radius: 0;
            }
        }
    }

}

